--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 	<title>Instagrid</title>
 <body>
 	<header>
-		<article>
+	
 		<div class="instagrid-icon">
 		<img src="assets/images/instagrid-logo.svg" alt="instagrid logo" >
 		</div>
-		</article>
-		<aside>
 		<div class="search-box">
 			<form action="#" id="hashtag-search">
 				<label class="hash-symbol">#</label>
@@ -22,11 +20,9 @@
 			    <button id="button" class="btn-big" type="submit"><i class="fa fa-search fa-2x"></i></button>
 		   </form>
 	   	</div>
-	   </aside>
 	</header>
 		<ul class="grid">
-
-		<!-- <img src="assets/images/ajax-loader.gif" alt="Loading..." class="ajax-loader" /> -->
+			<img src="assets/images/ajax-loader.gif" alt="Loading..." class="ajax-loader" />
   		</ul>
 	<footer>
 		<div>
