css touchups and readme file

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<script src"build/script.js"></script>
- 	<link rel="stylesheet" type="text/css" href="style.css">
+ 	<link rel="stylesheet" ytpe="text/css" href="style.css">
+ 	<!-- <link rel="stylesheet" type="text/css" href="reset.css"> -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 	<title>Instagrid</title>
 <body>
 	<header>
-	
 		<div class="instagrid-icon">
-		<img src="assets/images/instagrid-logo.svg" alt="instagrid logo" >
+			<img src="assets/images/instagrid-logo.svg" alt="instagrid logo" >
 		</div>
 		<div class="search-box">
 			<form action="#" id="hashtag-search">
@@ -31,6 +31,6 @@
 	</footer>
   	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="js/script.js"></script>
-
 </body>
 </html>
++
