implement load more button

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
 		   </form>
 	   	</div>
 	</header>
-		<ul class="grid">
-			<img src="assets/images/ajax-loader.gif" alt="Loading..." class="ajax-loader" />
+	<section class="content">
+		<!-- <div class="grid"> -->
+			<ul class="profile-wrapper">
   		</ul>
+		<!-- </div> -->
+		<img src="assets/images/ajax-loader.gif" alt="Loading..." class="ajax-loader" />
+		<button class="load-button">Load More</button>
+		</section>
 	<footer>
 		<div>
 			© Copyright 2015 INSTAGRID
